// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomeWindow — Dynamic Type accessibility guarantees growing: rendered tree stays stable 1`] = `
<View
  accessibilityRole="summary"
  collapsable={false}
  style={
    {
      "backgroundColor": "#28221F",
      "borderRadius": 16,
      "gap": 16,
      "opacity": 0,
      "padding": 20,
    }
  }
  testID="welcome-window"
>
  <Text
    maxFontSizeMultiplier={1.3}
    numberOfLines={1}
    style={
      [
        {
          "color": "#4A4D55",
          "fontFamily": "WantedSans",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        {
          "color": "#F4F0EB",
          "fontFamily": "Nanum Myeongjo",
          "fontSize": 56,
          "fontWeight": "700",
          "lineHeight": 64,
        },
      ]
    }
    testID="welcome-window-headline"
  >
    친구를 초대하면 같이 살아남을 수 있어요
  </Text>
  <View
    style={
      {
        "gap": 12,
      }
    }
  >
    <View
      accessibilityHint="곧 카카오 초대가 가능해질 거예요"
      accessibilityLabel="🥥 카카오로 초대"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 48,
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "backgroundColor": "#7E2C2A",
            "borderRadius": 16,
            "opacity": 0.6,
          },
        ]
      }
      testID="welcome-window-cta-kakao"
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "color": "#4A4D55",
              "fontFamily": "WantedSans",
              "fontSize": 15,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            },
            {
              "color": "#F4F0EB",
              "fontWeight": "700",
            },
          ]
        }
        testID="welcome-window-cta-kakao-label"
      >
        🥥 카카오로 초대
      </Text>
    </View>
    <View
      accessibilityLabel="🌿 먼저 오늘 기록하기"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 48,
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "backgroundColor": "#A48064",
            "borderRadius": 16,
          },
        ]
      }
      testID="welcome-window-cta-start-today"
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "color": "#4A4D55",
              "fontFamily": "WantedSans",
              "fontSize": 15,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            },
            {
              "color": "#F4F0EB",
              "fontWeight": "700",
            },
          ]
        }
        testID="welcome-window-cta-start-today-label"
      >
        🌿 먼저 오늘 기록하기
      </Text>
    </View>
  </View>
  <Text
    accessibilityRole="text"
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#4A4D55",
          "fontFamily": "WantedSans",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        {
          "color": "#B7B0A6",
        },
      ]
    }
    testID="welcome-window-period-copy"
  >
    3명 함께 — 환영 기간 끝까지 자유롭게 초대해요
  </Text>
</View>
`;

exports[`WelcomeWindow — Dynamic Type accessibility guarantees solo: rendered tree stays stable 1`] = `
<View
  accessibilityRole="summary"
  collapsable={false}
  style={
    {
      "backgroundColor": "#28221F",
      "borderRadius": 16,
      "gap": 16,
      "opacity": 0,
      "padding": 20,
    }
  }
  testID="welcome-window"
>
  <Text
    maxFontSizeMultiplier={1.3}
    numberOfLines={1}
    style={
      [
        {
          "color": "#4A4D55",
          "fontFamily": "WantedSans",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        {
          "color": "#F4F0EB",
          "fontFamily": "Nanum Myeongjo",
          "fontSize": 56,
          "fontWeight": "700",
          "lineHeight": 64,
        },
      ]
    }
    testID="welcome-window-headline"
  >
    친구를 초대하면 같이 살아남을 수 있어요
  </Text>
  <View
    style={
      {
        "gap": 12,
      }
    }
  >
    <View
      accessibilityHint="곧 카카오 초대가 가능해질 거예요"
      accessibilityLabel="🥥 카카오로 초대"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 48,
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "backgroundColor": "#7E2C2A",
            "borderRadius": 16,
            "opacity": 0.6,
          },
        ]
      }
      testID="welcome-window-cta-kakao"
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "color": "#4A4D55",
              "fontFamily": "WantedSans",
              "fontSize": 15,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            },
            {
              "color": "#F4F0EB",
              "fontWeight": "700",
            },
          ]
        }
        testID="welcome-window-cta-kakao-label"
      >
        🥥 카카오로 초대
      </Text>
    </View>
    <View
      accessibilityLabel="🌿 먼저 오늘 기록하기"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
            "minHeight": 48,
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "backgroundColor": "#A48064",
            "borderRadius": 16,
          },
        ]
      }
      testID="welcome-window-cta-start-today"
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "color": "#4A4D55",
              "fontFamily": "WantedSans",
              "fontSize": 15,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            },
            {
              "color": "#F4F0EB",
              "fontWeight": "700",
            },
          ]
        }
        testID="welcome-window-cta-start-today-label"
      >
        🌿 먼저 오늘 기록하기
      </Text>
    </View>
  </View>
  <Text
    accessibilityRole="text"
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#4A4D55",
          "fontFamily": "WantedSans",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        {
          "color": "#B7B0A6",
        },
      ]
    }
    testID="welcome-window-period-copy"
  >
    환영 기간 14일
  </Text>
</View>
`;
